# gallonge

./: README.md
src/: CMakeLists.txt  allonge.cpp  allonge.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
